hide the scrollbar from the page and fix image

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -7,6 +7,11 @@
   padding: 0;
 }
 
+/* hide the scrollbar from the page*/
+::-webkit-scrollbar {
+  display: none;
+}
+
 body {  
     min-height: 100vh;
     scroll-behavior: smooth;
